--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  display:inline;
+  align-content:flex-end;
+  background-color:rgb(80, 76, 76);
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
